--- a/config.yml
+++ b/config.yml
@@ -29,3 +29,12 @@ kernel_features:
 epochs: 30
 initial_learning_rate: 1.0
 lr_decay: 0.5
+
+# fine-tuning constants
+fine_tune_pos_words: 3
+fine_tune_neg_words: 3
+fine_tune_delta: 0.6
+fine_tune_reg: 1e-9
+fine_tune_grad_clip: 2
+fine_tune_lr: 0.05
+fine_tune_num_iters: 20
