--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,7 @@ kernel_features:
 epochs: 30
 initial_learning_rate: 1.0
 lr_decay: 0.5
+keep_prob: 0.5
 
 # fine-tuning constants
 fine_tune_pos_words: 3
