Added first variant

--- a/config.yml
+++ b/config.yml
@@ -4,12 +4,12 @@ num_dims: 1100
 n_layers: 2
 word_vocab_size: 50394 ##
 word_dims: 650
-char_vocab_size: 559 ##
+char_vocab_size: 561 ## after including <w> and </w>
 char_dims: 15
 num_units: 400
 lstm_clip: 10.0
 grad_clip: 5.0
-max_word_length: 255 ## 15
+max_word_length: 257 ## after including <w> and </w>
 kernel_sizes:
   - 1
   - 2
@@ -26,6 +26,7 @@ kernel_features:
   - 200
   - 200
   - 200
+sliding_window_size: 5
 epochs: 30
 initial_learning_rate: 1.0
 lr_decay: 0.5
