--- a/config/pooling_window.yml
+++ b/config/pooling_window.yml
@@ -29,9 +29,9 @@ kernel_features:
 sliding_window_size: 5
 max_tokens: 30
 epochs: 30
-initial_learning_rate: 0.001
+initial_learning_rate: 1.0 # 0.001 for Adam
 lr_decay: 0.5
-keep_prob: 0.5
+keep_prob: 1.0 # disable dropout for now
 
 # fine-tuning constants
 fine_tune_pos_words: 3
