--- a/config/pooling_window.yml
+++ b/config/pooling_window.yml
@@ -1,15 +1,14 @@
-batch_size: 40
+# model architecture
+batch_size: 20
 timesteps: 35
 num_dims: 1100
 n_layers: 2
-word_vocab_size: 50394 ##
 word_dims: 650
-char_vocab_size: 561 ## after including <w> and </w>
 char_dims: 15
 num_units: 400
 lstm_clip: 10.0
 grad_clip: 5.0
-max_word_length: 257 ## after including <w> and </w>
+keep_prob: 1.0 # disable dropout for now
 kernel_sizes:
   - 1
   - 2
@@ -26,12 +25,24 @@ kernel_features:
   - 200
   - 200
   - 200
+
+# vocabulary details
+word_vocab_size: -1 # to be initialized at run-time
+char_vocab_size: -1 # to be initialized at run-time
+max_word_length: 65 # after including <w> and </w>
+include_word_markers: True # whether to include <w> and </w> or not
+
+# pooling window architecture
 sliding_window_size: 5
-max_tokens: 30
+arch:
+  - True # gate
+  - True # LSTM state
+  - True # prev vector
+
+# training parameters
 epochs: 30
 initial_learning_rate: 1.0 # 0.001 for Adam
 lr_decay: 0.5
-keep_prob: 1.0 # disable dropout for now
 
 # fine-tuning constants
 fine_tune_pos_words: 3
@@ -42,3 +53,6 @@ fine_tune_grad_clip: 2
 fine_tune_lr: 0.05
 fine_tune_num_iters: 20
 fine_tune_cue_threshold: 5
+
+# testing parameters
+max_tokens: 30
