--- a/config/pooling_window.yml
+++ b/config/pooling_window.yml
@@ -1,11 +1,11 @@
 # model architecture
-batch_size: 40
+batch_size: 20
 timesteps: 35
 num_dims: 1100
 n_layers: 2
 word_dims: 650
 char_dims: 15
-num_units: 400
+num_units: 650
 lstm_clip: 10.0
 grad_clip: 5.0
 keep_prob: 1.0 # disable dropout for now
@@ -41,7 +41,8 @@ arch:
 
 # training parameters
 epochs: 30
-initial_learning_rate: 1.0 # 0.001 for Adam
+initial_learning_rate: 0.001 # 0.001 for Adam, 1.0 for SGD
+optimizer: 'adam'
 lr_decay: 0.5
 
 # fine-tuning constants
@@ -51,7 +52,7 @@ fine_tune_delta: 0.6
 fine_tune_reg: 1e-9
 fine_tune_grad_clip: 2
 fine_tune_lr: 0.05
-fine_tune_num_iters: 20
+fine_tune_num_iters: 100
 fine_tune_cue_threshold: 5
 
 # testing parameters
