--- a/config/pooling_window.yml
+++ b/config/pooling_window.yml
@@ -8,7 +8,7 @@ char_dims: 15
 num_units: 650
 lstm_clip: 10.0
 grad_clip: 5.0
-keep_prob: 1.0 # disable dropout for now
+keep_prob: 0.5 # disable dropout for now
 kernel_sizes:
   - 1
   - 2
@@ -35,14 +35,15 @@ include_word_markers: True # whether to include <w> and </w> or not
 # pooling window architecture
 sliding_window_size: 5
 arch:
-  - True # gate
+  - False # gate
   - True # LSTM state
-  - True # prev vector
+  - False # prev vector
 
 # training parameters
 epochs: 30
-initial_learning_rate: 0.001 # 0.001 for Adam, 1.0 for SGD
-optimizer: 'adam'
+initial_learning_rate: 0.1 # 0.001 for Adam, 1.0 for SGD
+optimizer: 'momentum'
+momentum: 0.5
 lr_decay: 0.5
 
 # fine-tuning constants
@@ -52,7 +53,7 @@ fine_tune_delta: 0.6
 fine_tune_reg: 1e-9
 fine_tune_grad_clip: 2
 fine_tune_lr: 0.05
-fine_tune_num_iters: 100
+fine_tune_num_iters: 20
 fine_tune_cue_threshold: 5
 
 # testing parameters
